DDW-418 - Align vertically the "News feed empty" message - container fixes

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -95,15 +95,14 @@
     overflow: hidden;
     padding: 20px;
 
+    &.hasUpdate.emptyFeedContainer {
+      .newsFeedEmptyContainer {
+        height: calc(100% - 100px) !important;
+      }
+    }
+
     &.emptyFeedContainer {
       height: 100%;
-
-      &.hasUpdate {
-        .newsFeedEmptyContainer {
-          height: calc(100% - 100px) !important;
-        }
-      }
-
       .newsFeedEmptyContainer {
         height: 100%;
       }
